# tui-skeleton

./: CLAUDE.md  Cargo.toml  README.md  pantry.toml
examples/: demo.rs
src/: animation.rs  bar_chart.ingredient.rs  bar_chart.rs  block.ingredient.rs  block.rs  braille_bar.ingredient.rs  braille_bar.rs  hbar_chart.ingredient.rs  hbar_chart.rs  kv_table.ingredient.rs  kv_table.rs  lib.rs  line_chart.ingredient.rs  line_chart.rs  list.ingredient.rs  list.rs  streaming_text.ingredient.rs  streaming_text.rs  table.ingredient.rs  table.rs  text.ingredient.rs  text.rs  use_cases.ingredient.rs  use_cases.rs
