[package]
name = "tui-skeleton"
version = "0.1.0"
edition = "2024"
description = "Animated skeleton loading widgets for Ratatui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "ratatui", "skeleton", "loading", "widget"]
categories = ["command-line-interface"]
repository = "https://github.com/jharsono/tui-skeleton"
readme = "README.md"
rust-version = "1.85"

[dependencies]
ratatui-core = "0.1.0"
ratatui-widgets = "0.3.0"

[dev-dependencies]
color-eyre = "0.6"
ratatui = { version = "0.30", features = ["crossterm"] }
